fix(feed): show last 3 entries on small frame

--- a/public/_assets/css/_components.scss
+++ b/public/_assets/css/_components.scss
@@ -24,7 +24,7 @@
             padding-top: var(--spacing-075);
         }
 
-        &:nth-child(n + 4) {
+        &:nth-child(n + 5) {
             display: none;
         }
     }
